Milestone: Hhomepage page completed

--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
     src: url(/paragone-luxury-serif-font/Paragone/Paragone.otf);
 }
   *{
+    margin: 0;
     font-family: "Paragone";
   }
 </style>
