Milestone: responsivenes amenities

--- a/public/index.html
+++ b/public/index.html
@@ -28,18 +28,15 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 <style>
-  @font-face {
-    font-family: "Paragone";
-    src: url(/paragone-luxury-serif-font/Paragone/Paragone.ttf);
-}
-@font-face {
-    font-family: "BodyParagone";
-    src: url(/paragone-luxury-serif-font/Paragone/Paragone.otf);
-}
-  *{
-    margin: 0;
-    font-family: "Paragone";
-  }
+   @font-face {
+      font-family: 'luxury';
+      src: url(/din/fonts/FF\ DIN\ Pro\ Regular.otf);
+    }
+
+    *{
+      font-family: 'luxury';
+      margin: 0;
+    }
 </style>
     <title>THE SARUNI</title>
   </head>
